Ensure bio field content does not truncate with ellipsis

--- a/app/javascript/styles/mastodon/accounts.scss
+++ b/app/javascript/styles/mastodon/accounts.scss
@@ -268,10 +268,6 @@
     box-sizing: border-box;
     padding: 14px;
     text-align: center;
-    max-height: 48px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
   }
 
   dt {
